# satellite-attitude-control

./: .gitignore  .gitmodules  Lingo.toml  README.md  angular.json  derivation.nix  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  tests.py
backend/: CMakeLists.txt
backend/src/: broadcast_server.cpp  broadcast_server.h  common.cpp  common.h  main.cpp
energy-measurement/: Log 1A-opt-processed.csv  Log 1A-opt.csv  Log 1B-opt.csv  Log 1C-subopt-processed.csv  Log 1C-subopt.csv  Log 1D-subopt.csv
frontend/: angular.json  pnpm-lock.yaml
frontend/src/: styles.scss
frontend/src/app/: app-routing.module.ts
frontend/src/assets/: model.urdf
mappings/: mappings-opt-0.csv  mappings-opt-1.csv  mappings-opt-2.csv  mappings-subopt-1.csv
models/: 3_axis_reaction_wheel.xml  reaction_wheel.xml
nixos-module/: backend.nix
pkgs/: backend.nix  frontend.nix  groundstation.nix
plots/: angle.aux  angle.tex  data  data.csv
projects/fsw24/frontend/: angular.json  package-lock.json  package.json
projects/tcrs24/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
scripts/: calculate-energy.py  plot-mapping.py  update_program_odroid.sh  update_program_rpi.sh
src/: CompressFiles.lf  DataProcessing.lf  GroundStation.cmake  GroundStation.lf  MujocoSimulator.lf  ReactionWheel.lf  Satelitte.lf  TcpSocketClient.lf  TcpSocketServer.lf  WebSocketCmake.txt  WebSocketServer.lf  common.c  common.h  mujoco-rpi.cmake  mujoco.cmake  reaction_wheel.h
src/app/: app.component.ts  app.module.ts
src/app/cube/: cube.component.ts
(+50 files in other folders)
